update user info, password, avatar
